Apex-662: Brand testimonials section remove left right side arrow all lang.

--- a/docroot/themes/custom/apex_tools/src/scss/components/_features.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_features.scss
@@ -64,6 +64,10 @@ $feature-height-map: (
     .feature-footer {
       max-width: 60%;
     }
+
+    .feature-header {
+      max-width: 100%;
+    }
   }
 
   .feature-floating-image {
