--- a/docroot/themes/custom/apex_tools/templates/views/views-view-fields--hubspot_forms--hubspot_title_icon.html.twig
+++ b/docroot/themes/custom/apex_tools/templates/views/views-view-fields--hubspot_forms--hubspot_title_icon.html.twig
@@ -6,6 +6,7 @@
       {{ fields.field_image.content }}
     </div>
     <div class="checkable-card-label">
+      <div class="selected">{{'Selected' | t }}</div>
       {{ fields.title.content }}
     </div>
   </a>
@@ -15,6 +16,7 @@
     {{ fields.field_image.content }}
   </div>
   <div class="checkable-card-label">
+    <div class="selected">{{'Selected' | t }}</div>
     {{ fields.title.content }}
   </div>
 </a>
