APEX-662: Content box width increase.

--- a/docroot/themes/custom/apex_tools/src/scss/components/_features.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_features.scss
@@ -68,6 +68,10 @@ $feature-height-map: (
     .feature-header {
       max-width: 100%;
     }
+
+    .feature-content {
+      max-width: 67%;
+    }
   }
 
   .feature-floating-image {
