Apex-662: Find a local repo filter issue fix.

--- a/docroot/themes/custom/apex_tools/src/scss/components/_geoui.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_geoui.scss
@@ -65,6 +65,13 @@
         transform-origin: top center;
         transition: 200ms ease;
     }
+
+    .filter-bar-item {
+        .filter {
+            margin: 12px 0;
+            border: 1px solid $filter-bar-border-color;
+        }
+    }
 }
 
 @keyframes loading-stripes {
