APS-188: New GTM tag via code

--- a/docroot/themes/custom/atg/templates/layout/html.html.twig
+++ b/docroot/themes/custom/atg/templates/layout/html.html.twig
@@ -57,7 +57,7 @@
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-MQM2M5F');</script>
+        })(window,document,'script','dataLayer','GTM-THWHJPR');</script>
         <!-- End Google Tag Manager -->
 
         <script>
@@ -193,7 +193,7 @@
     {% endif %}
     {% if current_language.id == 'en' %}
         <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQM2M5F"
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-THWHJPR"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
     {% endif %}
