APS-176 Update background image.

--- a/docroot/themes/custom/cleco/src/scss/components/_case-study.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_case-study.scss
@@ -1,6 +1,6 @@
 .cs-title-prefix {
   background-color: $color-off-black;
-  background-image: url('../img/CLE_Pattern-Web.jpg');
+  background-image: url('../img/CLE_Pattern-Web2.png');
   background-size: cover;
   color: $color-white;
   text-transform: uppercase;
