APS-176 Update summary field type.

--- a/docroot/themes/custom/cleco/src/scss/components/_case-study.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_case-study.scss
@@ -9,7 +9,12 @@
 
   @media only screen and (min-width: $media-screen-mobile) {
     text-align: center;
-  }    
+  }
+
+  p {
+    margin: auto;
+    max-width: 100%;
+  }
 }
 
 .hero {
