APEX-652: Styling for custom solution form.

--- a/docroot/themes/custom/apex_tools/src/scss/_variables.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/_variables.scss
@@ -14,6 +14,7 @@ $color-blue: #57c0e8;
 $color-primary-blue: #0040ff;
 $color-accent-bg: mix($color-gray-light, #fff, 16%);
 $color-platinum: #E5E5E5;
+$color-silver: #F7F7F7;
 
 /**
  * FONTS
