Apex-662: Hero banner add em tag style.

--- a/docroot/themes/custom/apex_tools/src/scss/components/_features.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_features.scss
@@ -9,6 +9,7 @@ $feature-height-map: (
   background: $color-accent-bg;
   display: flex;
   align-items: flex-end;
+  margin: 0 auto;
 
   @media (min-width: $breakpoint-layout-horizontal) {
     min-height: map-get($feature-height-map, default);
