--- a/docroot/themes/custom/apex_tools/src/scss/components/_hero.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_hero.scss
@@ -22,6 +22,11 @@ $hero-height-map: (
     flex-wrap: wrap;
   }
 
+  em {
+    font-style: normal;
+    color: $color-orange;
+  }
+
   &--enhanced {
     .hero-text {
       margin-left: 0;
@@ -84,6 +89,11 @@ $hero-height-map: (
   font-style: normal;
   line-height: 1.1;
   margin-bottom: 0.5em;
+
+  em {
+    font-style: normal;
+    color: $color-orange;
+  }
 }
 
 .hero-title {
