--- a/source/themes/custom/crescenttool/styles/libraries/node/full--page.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--page.scss
@@ -77,6 +77,9 @@
             width: 100%;
           }
         }
+        @include media('<=lg') {
+          height: 350px;
+        }
       }
     }
 
