APEX-652: reverting js and styling for 2nd step

--- a/docroot/themes/custom/apex_tools/src/scss/components/_multi-step-form.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_multi-step-form.scss
@@ -90,15 +90,18 @@ div.notice--info {
   }
 }
 
-.checkbox-step-two {
+.checkbox-second-step {
   .fieldset-wrapper {
     & > div {
       display: flex;
     }
     .form-item {
       display: flex;
+      width: 120px;
+
       label {
         margin-bottom: 0;
+        padding-left: 28px;
       }
     }
   }
