APS-171: FE for case study block for industrial solution pages done.

--- a/docroot/themes/custom/cleco/templates/content/field--field-trusted-by-biggest.html.twig
+++ b/docroot/themes/custom/cleco/templates/content/field--field-trusted-by-biggest.html.twig
@@ -1,3 +1,6 @@
+<div class = "main">
+ {{ drupal_view('successful_automative_solutions', 'case_study') }}.
+</div>
 <div class="main">
   {% if carousel_title %}
   <section class="section trusted-by-biggest-banner-title">
