--- a/docroot/themes/custom/cleco/templates/nodes/node--case-studies.html.twig
+++ b/docroot/themes/custom/cleco/templates/nodes/node--case-studies.html.twig
@@ -39,5 +39,9 @@
   </section>
   <div class="section cs-client-summary">
     {{ case_study_client_summary }}
+    <div class="schedule-demo-block">
+      <h3>Schedule a demo with a cleco representative Today !</h3>
+      <a href="/contact" target="_blank">Schedule Demo Today</a>
+    </div>
   </div>
 </main>
