APS-193: video banner title update.

--- a/docroot/themes/custom/cleco/src/scss/components/_hero.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_hero.scss
@@ -84,6 +84,9 @@ $hero-height-map: (
   background-color: $color-orange;
   padding: 20px;
   color: $color-white; 
+  font-family: $font;
+  font-weight: 700;
+  text-transform: uppercase;
   h2{
    letter-spacing: 1px;
    word-spacing: 2px;
